--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -12,71 +12,52 @@ on:
                - smoke
                - regression
                - all
-
+   
 jobs:
   run-tests:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     name: Run autotests
     steps:
-      - name: Checkout repository
+      - name: Run autotests
         uses: actions/checkout@v4
-      
-      - name: Set up Node.js environment
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-      
-      - name: Set up Python environment
+      - name: Set up Python evironment
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      
       - name: Install dependencies
-        run: |
+        run:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      
-      - name: Run all tests
+      - name: run all tests
         if: "github.event.inputs.deployment_target == 'all'"  
-        run: pytest --alluredir=allure-results || echo "Tests failed"
+        run: pytest --alluredir=allure-results
         continue-on-error: true
-      
-      - name: Run smoke tests
+      - name: run smoke tests
         if: "github.event.inputs.deployment_target == 'smoke'"  
-        run: pytest -m smoke --alluredir=allure-results || echo "Tests failed"
+        run: pytest -m smoke --alluredir=allure-results
         continue-on-error: true
-      
-      - name: Run regression tests
+      - name: run regression tests
         if: "github.event.inputs.deployment_target == 'regression'"  
-        run: pytest -m regression --alluredir=allure-results || echo "Tests failed"
+        run: pytest -m regression --alluredir=allure-results
         continue-on-error: true
-      
-      - name: Run extended tests
+      - name: run extended tests
         if: "github.event.inputs.deployment_target == 'extended'"  
-        run: pytest -m extended --alluredir=allure-results || echo "Tests failed"
+        run: pytest -m extended --alluredir=allure-results
         continue-on-error: true
-      
       - name: Install Java
         uses: actions/setup-java@v3
         with:
            distribution: 'microsoft'
            java-version: '17'
-      
       - name: Install Allure
-        run: |
-          Invoke-WebRequest -Uri https://github.com/allure-framework/allure2/releases/download/2.24.1/allure-2.24.1.zip -OutFile allure-2.24.1.zip
-          Expand-Archive -Path allure-2.24.1.zip -DestinationPath C:\allure-2.24.1
-          $env:Path += ";C:\allure-2.24.1\bin"
-      
+        run: sudo wget https://github.com/allure-framework/allure2/releases/download/2.24.1/allure-2.24.1.tgz && sudo tar -zxvf allure-2.24.1.tgz -C /opt/ && sudo ln -s /opt/allure-2.24.1/bin/allure /usr/bin/allure
       - name: Add Executor And Categories in Allure Results
-        run: Copy-Item -Path categories.json, executor.json -Destination allure-results/
-      
+        run: cp -r categories.json executor.json allure-results/  
       - name: Generate report  
         run: allure generate -c allure-results -o allure-report
-      
       - name: Save allure report
         uses: actions/upload-artifact@v3
         with:
            name: allure-report
            path: allure-report
-           retention-days: 1
+           etention-days: 1
