--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,17 +1,17 @@
-name: Python and Node.js tests with Allure
+name: Python autotests with Allure
 
-on:
-  workflow_dispatch:
-    inputs:
-      deployment_target:
-        description: choose tests set
-        required: true
-        type: choice
-        default: smoke
-        options:
-          - smoke
-          - regression
-          - all
+on: 
+   workflow_dispatch:
+      inputs:
+         deployment_target:
+            description: choose tests set
+            required: true
+            type: choice
+            default: smoke
+            options:
+               - smoke
+               - regression
+               - all
    
 jobs:
   run-tests:
@@ -20,66 +20,44 @@ jobs:
     steps:
       - name: Run autotests
         uses: actions/checkout@v4
-      
-      - name: Set up Python environment
+      - name: Set up Python evironment
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      
-      - name: Install Python dependencies
-        run: |
+      - name: Install dependencies
+        run:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      
-      # Conditional section for Python tests
-      - name: Python tests
-        if: "github.event.inputs.deployment_target != 'none'"
-        run: |
-          if [[ ${{ github.event.inputs.deployment_target }} == 'all' ]]; then
-            pytest --alluredir=allure-results
-          elif [[ ${{ github.event.inputs.deployment_target }} == 'smoke' ]]; then
-            pytest -m smoke --alluredir=allure-results
-          elif [[ ${{ github.event.inputs.deployment_target }} == 'regression' ]]; then
-            pytest -m regression --alluredir=allure-results
-          elif [[ ${{ github.event.inputs.deployment_target }} == 'extended' ]]; then
-            pytest -m extended --alluredir=allure-results
-          fi
+      - name: run all tests
+        if: "github.event.inputs.deployment_target == 'all'"  
+        run: pytest --alluredir=allure-results
         continue-on-error: true
-      
-      # Conditional section for Node.js setup and execution
-      - name: Node.js setup and run
-        if: "github.event.inputs.deployment_target != 'none'"
-        run: |
-          # Example commands to set up Node.js (replace with actual setup commands)
-          curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
-          sudo apt-get install -y nodejs
-      
-          # Example Node.js execution (replace with your Node.js commands)
-          node main.js
-      
+      - name: run smoke tests
+        if: "github.event.inputs.deployment_target == 'smoke'"  
+        run: pytest -m smoke --alluredir=allure-results
+        continue-on-error: true
+      - name: run regression tests
+        if: "github.event.inputs.deployment_target == 'regression'"  
+        run: pytest -m regression --alluredir=allure-results
+        continue-on-error: true
+      - name: run extended tests
+        if: "github.event.inputs.deployment_target == 'extended'"  
+        run: pytest -m extended --alluredir=allure-results
+        continue-on-error: true
       - name: Install Java
         uses: actions/setup-java@v3
         with:
-          distribution: 'microsoft'
-          java-version: '17'
-      
+           distribution: 'microsoft'
+           java-version: '17'
       - name: Install Allure
-        run: |
-          sudo wget https://github.com/allure-framework/allure2/releases/download/2.24.1/allure-2.24.1.tgz
-          sudo tar -zxvf allure-2.24.1.tgz -C /opt/
-          sudo ln -s /opt/allure-2.24.1/bin/allure /usr/bin/allure
-      
+        run: sudo wget https://github.com/allure-framework/allure2/releases/download/2.24.1/allure-2.24.1.tgz && sudo tar -zxvf allure-2.24.1.tgz -C /opt/ && sudo ln -s /opt/allure-2.24.1/bin/allure /usr/bin/allure
       - name: Add Executor And Categories in Allure Results
-        run: cp -r categories.json executor.json allure-results/
-      
+        run: cp -r categories.json executor.json allure-results/  
       - name: Generate report  
         run: allure generate -c allure-results -o allure-report
-      
       - name: Save allure report
         uses: actions/upload-artifact@v3
         with:
-          name: allure-report
-          path: allure-report
-          retention-days: 1
-
-
+           name: allure-report
+           path: allure-report
+           etention-days: 1
